--- a/index copy.html
+++ b/index copy.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
 	<title>InfoRetro Prototype</title>
-	<script
-			  src="https://code.jquery.com/jquery-3.3.1.js"
+	<script src="https://code.jquery.com/jquery-3.3.1.js"
 			  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
               crossorigin="anonymous"></script>
               
@@ -16,8 +15,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     
-    <!-- D3 -->
-    <script src="https://d3js.org/d3.v4.min.js"></script>
 
    
 </head>
