--- a/336/336_5.html
+++ b/336/336_5.html
@@ -44,75 +44,87 @@
                 
                 <h1>Topic: "Radio Waves and Brain Cancer" </h1>
                 <div>
-                    <h2> Electric Fields, Cancer Link Nixed </h2>
+                    <h2> BEARS BECOME UNCOMFORTABLY CLOSE NEIGHBORS IN NORTHERN NEW JERSEY  </h2>
                     <P>
-                        WASHINGTON (AP) -- Six years of research have produced little  
-                    hard evidence that the magnetic fields around electric power lines 
-                    cause cancer, yet some lingering concerns remain, a National 
-                    Institutes of Health division reported Tuesday. 
-                    </P>
-                    <P>
-                        ``Virtually all of the laboratory evidence in animals and humans  
-                    and most of the mechanistic studies in cells fail to support a 
-                    causal relationship'' between the electromagnetic fields and 
-                    cancer, the National Institute of Environmental Health Sciences 
-                    said in the report to Congress. 
-                    </P>
-                    <P>
-                        However, it said there have been some statistical associations  
-                    between the fields and childhood leukemia as well as chronic 
-                    lymphocytic leukemia in adults exposed to the fields through their 
-                    work, such as electric utility workers, machinists and welders. 
-                    </P>
-                    <P>
-                        Research is continuing on these ``lingering concerns'' and  
-                    efforts to reduce human exposure to electromagnetic fields should 
-                    continue, the report said. 
-                    </P>
-                    <P>
-                        ``The lack of consistent, positive findings in animal or  
-                    mechanistic studies weakens the belief that this association is 
-                    actually due to EMF, but it cannot completely discount the 
-                    epidemiological findings,'' NIEHS Director Kenneth Olden said in a 
-                    statement. 
-                    </P>
-                    <P>
-                        Therefore, he said, since virtually everyone in the country is  
-                    routinely exposed to EMF, efforts to reduce such exposure should 
-                    continue. 
-                    </P>
-                    <P>
-                        For example, the electrical industry should continue efforts to  
-                    reduce the electromagnetic fields around large transmission lines 
-                    and communities should enforce electrical codes to avoid wiring 
-                    errors that can increase EMF. 
-                    </P>
-                    <P>
-                        The focus on a possible link to cancer stemmed from a 1979  
-                    Denver study that tied leukemia to EMF, but the researchers also 
-                    concluded that there was no connection between EMF and other 
-                    problems including Alzheimer's disease, depression and birth 
-                    defects. 
-                    </P>
-                    <P>
-                        Just a year ago, a panel of scientists studying this issue  
-                    concluded, in a 19-9 vote, that electromagnetic fields should be 
-                    considered ``possible human carcinogens'' though the risk was 
-                    ``probably quite small.'' 
-                    </P>
-                    <P>
-                        That was at odds with a 1996 report by a National Research  
-                    Council panel of scientists.Those scientists evaluated about 500 
-                    studies on the health effects of high voltage power lines and found 
-                    ``no conclusive and consistent evidence'' that electric and 
-                    magnetic fields cause any human disease. 
-                    </P>
-                    <P>
-                        Though the link between electricity and disease has long been  
-                    controversial, some consumer groups have sued power companies or 
-                    forced utility firms to move power lines or install shielding. 
-
-                    </P>
+                            STILLWATER, N.J. _ Danette Conroy was upstairs cleaning kitchen
+                         cabinets and her year-old daughter Kayleigh was asleep when the
+                         black bear somehow got into the ground floor of their new home.
+                         They never heard a thing until the crash of breaking glass. The
+                         bear, apparently startled by the arrival of Conroy's husband,
+                         Chris, had plunged through a double-paned window and stumbled away
+                         toward the woods.
+                         </P>
+                         <P>
+                            ``I've lived in Stillwater since I was age 4, and now I'm 41,''
+                         said Chris Conroy, a hunter, recalling what happened last summer.
+                         ``I've never ever, even seen a bear until about five years ago.''
+                         </P>
+                         <P>
+                            These days, everybody in this township of 4,500 on the slopes of
+                         the Kittatinny Mountains of northwestern New Jersey seems to know
+                         somebody with a bear story. Charlie McMahon raised goats as a hobby
+                         for 15 years until a bear killed two of them three years ago. Two
+                         weeks ago, at a Boy Scout camp in nearby Allamuchy, a bear yanked a
+                         sleeping bag _ with a teen-ager inside it _ off a bench; the youth,
+                         who was uninjured, screamed and frightened off the bear.
+                         </P>
+                         <P>
+                            And last summer, a bear broke up Diane Apostola's backyard
+                         barbecue for 20 relatives. ``He just came walking down like he was
+                         coming to the party with us,'' Apostola said. ``We all ran into the
+                         house, and he just left.''
+                         </P>
+                         <P>
+                            As the numbers of black bears and people have grown in forested
+                         areas of the New York region, the bears _ once timid and content
+                         with isolated lives in the woods _ are venturing more and more into
+                         campgrounds, yards and even houses in search of food. The place
+                         where their wanderings have caused the biggest stir is New Jersey;
+                         the state Division of Fish and Wildlife said it received 1,659
+                         complaints about bears last year, up from 285 in 1995.
+                         </P>
+                         <P>
+                            Most of the complaints were about bears roaming in backyards and
+                         getting into garbage and bird feeders, but 28 of them involved
+                         bears killing livestock and 29 were about bears getting into homes.
+                         Although none of the complaints involved bears attacking or
+                         injuring people, the intrusions have imposed anxieties and
+                         restrictions on life in this wooded corner of the state.
+                         </P>
+                         <P>
+                            The New Jersey Fish and Game Council will hold a public hearing
+                         Tuesday on its proposal to allow bear hunting this fall for the
+                         first time in 30 years. The council wants to reduce the state's
+                         bear population, now estimated at 1,000, to between 250 and 330 in
+                         the next three years in order to cut down on encounters between
+                         people and bears.
+                         </P>
+                         <P>
+                            ``We see this as a safety issue,'' said John W. Bradway,
+                         chairman of the council. ``Some people fear for their children's
+                         safety.''
+                         </P>
+                         <P>
+                            The hunting proposal, made last March, is opposed by 22 animal
+                         rights groups that want the state to do more to teach people to
+                         coexist with bears.
+                         </P>
+                         <P>
+                            ``There's no overpopulation problem,'' said Lynda Smith,
+                         director of one such group, the Bear Education and Resource Group
+                         of West Milford, N.J. ``If we cut off food in the neighborhoods,
+                         the bears won't come in.''
+                         </P>
+                         <P>
+                            But the animals have a keen sense of smell that can penetrate
+                         even the strongest barriers to food. Two summers ago, a black bear
+                         broke into Carolyn and Michael Ganon's home here by yanking an
+                         air-conditioner out of a window and crawling in through the hole _
+                         apparently seeking an uncovered canister of chocolate-covered
+                         toffee in the family room. Terrified, the couple's son, Leland, 13,
+                         ran upstairs and called 911. The police found the animal sitting
+                         near the Ganons' porch, calmly eating the candy.
+                         </P>
                 </div>
                 
                 <button type="button" class="btn btn-primary" onclick="relevant();draw();screenshot2();redirect('336_6.html');">Relevant</button>
