Topics updated and 362 done

--- a/336/336_8.html
+++ b/336/336_8.html
@@ -42,7 +42,7 @@
             
             <foreignobject id="fo" class="node" width="60%" height="100%">
                 
-                <h1>Topic: "Radio Waves and Brain Cancer" </h1>
+                <h1>Topic: "Black Bear Attacks" </h1>
                 <div>
                     <h2> `WHO'S BEEN EATING MY FOOD?' COLORADANS ASK, AS BEARS FORAGE CLOSER
                             TO HOMES  </h2>
