--- a/336/336_5.html
+++ b/336/336_5.html
@@ -42,7 +42,7 @@
             
             <foreignobject id="fo" class="node" width="60%" height="100%">
                 
-                <h1>Topic: "Radio Waves and Brain Cancer" </h1>
+                <h1>Topic: "Black Bear Attacks" </h1>
                 <div>
                     <h2> BEARS BECOME UNCOMFORTABLY CLOSE NEIGHBORS IN NORTHERN NEW JERSEY  </h2>
                     <P>
