--- a/436/436_6.html
+++ b/436/436_6.html
@@ -42,7 +42,7 @@
             
             <foreignobject id="fo" class="node" width="60%" height="100%">
                 
-                <h1>Topic: "Radio Waves and Brain Cancer" </h1>
+                <h1>Topic: "Railway Accidents" </h1>
                 <div>
                     <h2> Electric Fields, Cancer Link Nixed </h2>
                     <P>
