--- a/367/367_3.html
+++ b/367/367_3.html
@@ -44,75 +44,45 @@
                 
                 <h1>Topic: "Piracy" </h1>
                 <div>
-                    <h2> Electric Fields, Cancer Link Nixed </h2>
+                    <h2> Cambodia Denies Piracy Charges Against Soldiers </h2>
                     <P>
-                        WASHINGTON (AP) -- Six years of research have produced little  
-                    hard evidence that the magnetic fields around electric power lines 
-                    cause cancer, yet some lingering concerns remain, a National 
-                    Institutes of Health division reported Tuesday. 
-                    </P>
-                    <P>
-                        ``Virtually all of the laboratory evidence in animals and humans  
-                    and most of the mechanistic studies in cells fail to support a 
-                    causal relationship'' between the electromagnetic fields and 
-                    cancer, the National Institute of Environmental Health Sciences 
-                    said in the report to Congress. 
-                    </P>
-                    <P>
-                        However, it said there have been some statistical associations  
-                    between the fields and childhood leukemia as well as chronic 
-                    lymphocytic leukemia in adults exposed to the fields through their 
-                    work, such as electric utility workers, machinists and welders. 
-                    </P>
-                    <P>
-                        Research is continuing on these ``lingering concerns'' and  
-                    efforts to reduce human exposure to electromagnetic fields should 
-                    continue, the report said. 
-                    </P>
-                    <P>
-                        ``The lack of consistent, positive findings in animal or  
-                    mechanistic studies weakens the belief that this association is 
-                    actually due to EMF, but it cannot completely discount the 
-                    epidemiological findings,'' NIEHS Director Kenneth Olden said in a 
-                    statement. 
-                    </P>
-                    <P>
-                        Therefore, he said, since virtually everyone in the country is  
-                    routinely exposed to EMF, efforts to reduce such exposure should 
-                    continue. 
-                    </P>
-                    <P>
-                        For example, the electrical industry should continue efforts to  
-                    reduce the electromagnetic fields around large transmission lines 
-                    and communities should enforce electrical codes to avoid wiring 
-                    errors that can increase EMF. 
-                    </P>
-                    <P>
-                        The focus on a possible link to cancer stemmed from a 1979  
-                    Denver study that tied leukemia to EMF, but the researchers also 
-                    concluded that there was no connection between EMF and other 
-                    problems including Alzheimer's disease, depression and birth 
-                    defects. 
-                    </P>
-                    <P>
-                        Just a year ago, a panel of scientists studying this issue  
-                    concluded, in a 19-9 vote, that electromagnetic fields should be 
-                    considered ``possible human carcinogens'' though the risk was 
-                    ``probably quite small.'' 
-                    </P>
-                    <P>
-                        That was at odds with a 1996 report by a National Research  
-                    Council panel of scientists.Those scientists evaluated about 500 
-                    studies on the health effects of high voltage power lines and found 
-                    ``no conclusive and consistent evidence'' that electric and 
-                    magnetic fields cause any human disease. 
-                    </P>
-                    <P>
-                        Though the link between electricity and disease has long been  
-                    controversial, some consumer groups have sued power companies or 
-                    forced utility firms to move power lines or install shielding. 
-
-                    </P>
+                            BANGKOK, September 27 (Xinhua) -- Cambodia denied that 11 of
+                            its soldiers had been engaged in piracy in Thai waters and
+                            dismissed piracy charges made against them by Thai authorities.
+                            </P>
+                            <P>
+                            The soldiers could not be charged with piracy because they were
+                            only carrying out their duties, Cambodia's Koh Kong Governor Rung
+                            Pramkesorn said, according to the local press today.
+                            </P>
+                            <P>
+                            The 11 Cambodian soldiers were arrested by the Thai Navy off
+                            Thailand's eastern coast on Sunday.
+                            </P>
+                            <P>
+                            The soldiers were reportedly seized along with their patrol
+                            boat by the Thai Navy after a brief clash off the eastern coastal
+                            province of Trat, when they were allegedly attempting to rob a
+                            Thai trawler.
+                            </P>
+                            <P>
+                            The Thai side said that the trawler was in Thai territorial
+                            waters and that the Cambodian soldiers would face charges of
+                            illegal entry, illegal possession and use of weapons, piracy,
+                            resisting arrest and illegal use of radio communication.
+                            </P>
+                            <P>
+                            However, the soldiers claimed that the Thai trawler was fishing
+                            in Cambodian waters.
+                            </P>
+                            <P>
+                            Governor Pramkesorn also accused the trawler of illegally
+                            fishing in Cambodian waters.
+                            </P>
+                            <P>
+                            The soldiers currently are detained at a police station in Trat
+                            province and they will soon be transferred to the Trat Prison.
+                            </P>
                 </div>
                 
                 <button type="button" class="btn btn-primary" onclick="relevant();draw();screenshot2();redirect('367_4.html');">Relevant</button>
