--- a/367/367_4.html
+++ b/367/367_4.html
@@ -44,75 +44,39 @@
                 
                 <h1>Topic: "Piracy" </h1>
                 <div>
-                    <h2> Electric Fields, Cancer Link Nixed </h2>
+                    <h2> China Punishes Three CD Manufacturers </h2>
                     <P>
-                        WASHINGTON (AP) -- Six years of research have produced little  
-                    hard evidence that the magnetic fields around electric power lines 
-                    cause cancer, yet some lingering concerns remain, a National 
-                    Institutes of Health division reported Tuesday. 
-                    </P>
-                    <P>
-                        ``Virtually all of the laboratory evidence in animals and humans  
-                    and most of the mechanistic studies in cells fail to support a 
-                    causal relationship'' between the electromagnetic fields and 
-                    cancer, the National Institute of Environmental Health Sciences 
-                    said in the report to Congress. 
-                    </P>
-                    <P>
-                        However, it said there have been some statistical associations  
-                    between the fields and childhood leukemia as well as chronic 
-                    lymphocytic leukemia in adults exposed to the fields through their 
-                    work, such as electric utility workers, machinists and welders. 
-                    </P>
-                    <P>
-                        Research is continuing on these ``lingering concerns'' and  
-                    efforts to reduce human exposure to electromagnetic fields should 
-                    continue, the report said. 
-                    </P>
-                    <P>
-                        ``The lack of consistent, positive findings in animal or  
-                    mechanistic studies weakens the belief that this association is 
-                    actually due to EMF, but it cannot completely discount the 
-                    epidemiological findings,'' NIEHS Director Kenneth Olden said in a 
-                    statement. 
-                    </P>
-                    <P>
-                        Therefore, he said, since virtually everyone in the country is  
-                    routinely exposed to EMF, efforts to reduce such exposure should 
-                    continue. 
-                    </P>
-                    <P>
-                        For example, the electrical industry should continue efforts to  
-                    reduce the electromagnetic fields around large transmission lines 
-                    and communities should enforce electrical codes to avoid wiring 
-                    errors that can increase EMF. 
-                    </P>
-                    <P>
-                        The focus on a possible link to cancer stemmed from a 1979  
-                    Denver study that tied leukemia to EMF, but the researchers also 
-                    concluded that there was no connection between EMF and other 
-                    problems including Alzheimer's disease, depression and birth 
-                    defects. 
-                    </P>
-                    <P>
-                        Just a year ago, a panel of scientists studying this issue  
-                    concluded, in a 19-9 vote, that electromagnetic fields should be 
-                    considered ``possible human carcinogens'' though the risk was 
-                    ``probably quite small.'' 
-                    </P>
-                    <P>
-                        That was at odds with a 1996 report by a National Research  
-                    Council panel of scientists.Those scientists evaluated about 500 
-                    studies on the health effects of high voltage power lines and found 
-                    ``no conclusive and consistent evidence'' that electric and 
-                    magnetic fields cause any human disease. 
-                    </P>
-                    <P>
-                        Though the link between electricity and disease has long been  
-                    controversial, some consumer groups have sued power companies or 
-                    forced utility firms to move power lines or install shielding. 
-
-                    </P>
+                            BEIJING, June 11 (Xinhua) -- China has suspended the
+                            reproduction licences of two CD factories, accusing them of piracy
+                            and fining them each 200,000 yuan (about 24,096 US dollars).
+                            </P>
+                            <P>
+                            Officials with the Press and Publication Administration and the
+                            State Copyright Bureau said this move serves to show the Chinese
+                            government's sincere effort to fight piracy and protect
+                            intellectual property rights.
+                            </P>
+                            <P>
+                            According to the officials, the Chaoyang Jinfa CD Company and
+                            Zhongshan Yisheng CD Company, both in Guangdong Province, were
+                            engaged in reproducing pirated and pornographic CDs.
+                            </P>
+                            <P>
+                            These reproductions were in serious violation of China's
+                            efforts to preserve intellectual property rights and caused severe
+                            negative impact, the official said.
+                            </P>
+                            <P>
+                            And the Jindie Technology Company in Guangxi Zhuang Autonomous
+                            Region, which imported two production lines to reproduce pirated
+                            and pornographic CDs without permission from the Press and
+                            Publication Administration, also was ordered to suspend the
+                            duplication business.
+                            </P>
+                            <P>
+                            Since late last year, China has suspended licences of seven
+                            other CD manufacturers for piracy.  
+                            </P>
                 </div>
                 
                 <button type="button" class="btn btn-primary" onclick="relevant();draw();screenshot2();redirect('367_5.html');">Relevant</button>
