--- a/383/383_8.html
+++ b/383/383_8.html
@@ -44,75 +44,99 @@
                 
                 <h1>Topic: "Mental Illness Drugs" </h1>
                 <div>
-                    <h2> Electric Fields, Cancer Link Nixed </h2>
+                    <h2> PERSONAL HEALTH: DRUGS, SAFE AND NOT SO SAFE, IN PREGNANCY </h2>
                     <P>
-                        WASHINGTON (AP) -- Six years of research have produced little  
-                    hard evidence that the magnetic fields around electric power lines 
-                    cause cancer, yet some lingering concerns remain, a National 
-                    Institutes of Health division reported Tuesday. 
-                    </P>
-                    <P>
-                        ``Virtually all of the laboratory evidence in animals and humans  
-                    and most of the mechanistic studies in cells fail to support a 
-                    causal relationship'' between the electromagnetic fields and 
-                    cancer, the National Institute of Environmental Health Sciences 
-                    said in the report to Congress. 
-                    </P>
-                    <P>
-                        However, it said there have been some statistical associations  
-                    between the fields and childhood leukemia as well as chronic 
-                    lymphocytic leukemia in adults exposed to the fields through their 
-                    work, such as electric utility workers, machinists and welders. 
-                    </P>
-                    <P>
-                        Research is continuing on these ``lingering concerns'' and  
-                    efforts to reduce human exposure to electromagnetic fields should 
-                    continue, the report said. 
-                    </P>
-                    <P>
-                        ``The lack of consistent, positive findings in animal or  
-                    mechanistic studies weakens the belief that this association is 
-                    actually due to EMF, but it cannot completely discount the 
-                    epidemiological findings,'' NIEHS Director Kenneth Olden said in a 
-                    statement. 
-                    </P>
-                    <P>
-                        Therefore, he said, since virtually everyone in the country is  
-                    routinely exposed to EMF, efforts to reduce such exposure should 
-                    continue. 
-                    </P>
-                    <P>
-                        For example, the electrical industry should continue efforts to  
-                    reduce the electromagnetic fields around large transmission lines 
-                    and communities should enforce electrical codes to avoid wiring 
-                    errors that can increase EMF. 
-                    </P>
-                    <P>
-                        The focus on a possible link to cancer stemmed from a 1979  
-                    Denver study that tied leukemia to EMF, but the researchers also 
-                    concluded that there was no connection between EMF and other 
-                    problems including Alzheimer's disease, depression and birth 
-                    defects. 
-                    </P>
-                    <P>
-                        Just a year ago, a panel of scientists studying this issue  
-                    concluded, in a 19-9 vote, that electromagnetic fields should be 
-                    considered ``possible human carcinogens'' though the risk was 
-                    ``probably quite small.'' 
-                    </P>
-                    <P>
-                        That was at odds with a 1996 report by a National Research  
-                    Council panel of scientists.Those scientists evaluated about 500 
-                    studies on the health effects of high voltage power lines and found 
-                    ``no conclusive and consistent evidence'' that electric and 
-                    magnetic fields cause any human disease. 
-                    </P>
-                    <P>
-                        Though the link between electricity and disease has long been  
-                    controversial, some consumer groups have sued power companies or 
-                    forced utility firms to move power lines or install shielding. 
-
-                    </P>
+                            The drug metronidazole, commonly used to treat intestinal
+                         parasites, is best avoided in the first trimester. Lindane (as in
+                         Kwell), formerly widely used to treat lice infestations, should be
+                         avoided entirely during pregnancy, and pregnant women should wear
+                         rubber gloves when treating children for head lice; safer
+                         alternatives are the pyrethroids with piperonyl butoxide (Rid and
+                         R&AMP;C, for example) or a fine-toothed comb.
+                         </P>
+                         <P>
+                            The new nonsedating antihistamines used to treat allergies have
+                         not been tested for safety in pregnancy. But women who have been
+                         receiving desensitization shots can continue to do so at a
+                         maintenance dose during pregnancy. Women with asthma can safely use
+                         theophylline, aminophylline, terbutaline and cromolyn sodium. And
+                         it may surprise you to learn that the potent immune-suppressing
+                         drugs prednisone and prednisolone are considered drugs of choice
+                         during pregnancy because they are nearly completely inactivated by
+                         the placenta.
+                         </P>
+                         <P>
+                            Also safe are alphamethyldopa and propranolol to treat chronic
+                         hypertension. For women plagued by heartburn, antacids are safe for
+                         use in any trimester, but bicarbonate of soda, magnesium
+                         trisilicate and the new H2 blockers and proton pump inhibitors are
+                         potentially toxic to the fetus.
+                         </P>
+                         <P>
+                            Reports on the safety of the new antidepressants called
+                         selective serotonin reuptake inhibitors (SSRI.'s) have been mixed.
+                         One large study of Prozac found no increase in miscarriage or major
+                         birth defects, but infants exposed in the womb were more likely to
+                         have minor defects. The latest report, based on 524 pregnancies,
+                         half of which involved the use of an SSRI, found no increase in
+                         major malformations, miscarriage, stillbirth or premature birth
+                         associated with the either the SSRI's or tricyclic antidepressant
+                         drugs taken in recommended doses during pregnancy.
+                         </P>
+                         <P>
+                            Although most medications taken in normal doses by a nursing
+                         mother are safe for infants, a few are definitely too toxic for a
+                         baby. These include chemotherapy drugs to treat cancer; lithium to
+                         treat bipolar disorder and drugs like cyclosporine that suppress
+                         the immune system. Even when taking a safe drug, a nursing mother
+                         would be wise to coordinate the dosages with the baby's schedule,
+                         just after the baby has been fed or before the baby's longest
+                         sleep.
+                         </P>
+                         <P>
+                            For more information about the safety of over-the-counter drugs
+                         during pregnancy, see ``I'm Pregnant and I Have a Cold'' by Dr.
+                         Craig V. Towers, a perinatologist in California at Long Beach
+                         Memorial Medical Center, just published by RBC Press ($27.95 in
+                         hardcover, $14.95 in paperback). Other Substances of Concern
+                         </P>
+                         <P>
+                            Barbara K. Hackley, a nurse midwife at the Yale School of
+                         Nursing, recently reviewed the safety of immunizations during
+                         pregnancy in The Journal of Nurse-Midwifery. She approves of the
+                         toxoid and inactivated vaccines _ tetanus, diphtheria, hepatitis B,
+                         influenza and pneumococcal vaccines _ although she advises that
+                         even these vaccines are best given in the second and third
+                         trimesters in case they may have some effect yet unrecognized on a
+                         young fetus. Flu vaccine (taken each fall to include the latest
+                         strains) is now recommended for all pregnant women. To be avoided
+                         are live virus and bacterial vaccines, including those for measles,
+                         mumps, rubella and chicken pox.
+                         </P>
+                         <P>
+                            Legal recreational drugs like alcohol, nicotine and caffeine are
+                         also common concerns among pregnant women. Cigarette smoking during
+                         pregnancy can compromise fetal growth, resulting in babies that are
+                         smaller than they should be at birth, and may also cause
+                         long-lasting intellectual deficits. Heavy consumption of alcohol
+                         during pregnancy causes fetal alcohol syndrome marked by subnormal
+                         growth, muscle and heart damage, and low intelligence or mental
+                         retardation. Although an occasional drink is highly unlikely to
+                         have any adverse effect on a developing fetus, the Food and Drug
+                         Administration advises pregnant women to refrain from drinking any
+                         alcohol.
+                         </P>
+                         <P>
+                            Caffeine and coffee, on the other hand, have been pretty much
+                         cleared of earlier suspicions of fetal harm, at least when consumed
+                         in moderation: no more than three cups of coffee a day. In 1980,
+                         after reports of birth defects in mice induced by caffeine, the FDA
+                         warned pregnant women to limit their intake of coffee. But
+                         considerable evidence accumulated since has not implicated coffee
+                         as a cause of birth defects in humans. Still, there is some
+                         evidence that consuming more than three cups of coffee a day may
+                         slightly reduce birth weights.
+                         </P>
                 </div>
                 
                 <button type="button" class="btn btn-primary" onclick="relevant();draw();screenshot2();redirect('383_9.html');">Relevant</button>
