--- a/426/426_3.html
+++ b/426/426_3.html
@@ -44,75 +44,58 @@
                 
                 <h1>Topic: "Law Enforcement, Dogs" </h1>
                 <div>
-                    <h2> Electric Fields, Cancer Link Nixed </h2>
+                    <h2> MOSCOW ARRESTS SUSPECTS BUT CAN'T LINK ANY TO FATAL BOMBING </h2>
                     <P>
-                        WASHINGTON (AP) -- Six years of research have produced little  
-                    hard evidence that the magnetic fields around electric power lines 
-                    cause cancer, yet some lingering concerns remain, a National 
-                    Institutes of Health division reported Tuesday. 
-                    </P>
-                    <P>
-                        ``Virtually all of the laboratory evidence in animals and humans  
-                    and most of the mechanistic studies in cells fail to support a 
-                    causal relationship'' between the electromagnetic fields and 
-                    cancer, the National Institute of Environmental Health Sciences 
-                    said in the report to Congress. 
-                    </P>
-                    <P>
-                        However, it said there have been some statistical associations  
-                    between the fields and childhood leukemia as well as chronic 
-                    lymphocytic leukemia in adults exposed to the fields through their 
-                    work, such as electric utility workers, machinists and welders. 
-                    </P>
-                    <P>
-                        Research is continuing on these ``lingering concerns'' and  
-                    efforts to reduce human exposure to electromagnetic fields should 
-                    continue, the report said. 
-                    </P>
-                    <P>
-                        ``The lack of consistent, positive findings in animal or  
-                    mechanistic studies weakens the belief that this association is 
-                    actually due to EMF, but it cannot completely discount the 
-                    epidemiological findings,'' NIEHS Director Kenneth Olden said in a 
-                    statement. 
-                    </P>
-                    <P>
-                        Therefore, he said, since virtually everyone in the country is  
-                    routinely exposed to EMF, efforts to reduce such exposure should 
-                    continue. 
-                    </P>
-                    <P>
-                        For example, the electrical industry should continue efforts to  
-                    reduce the electromagnetic fields around large transmission lines 
-                    and communities should enforce electrical codes to avoid wiring 
-                    errors that can increase EMF. 
-                    </P>
-                    <P>
-                        The focus on a possible link to cancer stemmed from a 1979  
-                    Denver study that tied leukemia to EMF, but the researchers also 
-                    concluded that there was no connection between EMF and other 
-                    problems including Alzheimer's disease, depression and birth 
-                    defects. 
-                    </P>
-                    <P>
-                        Just a year ago, a panel of scientists studying this issue  
-                    concluded, in a 19-9 vote, that electromagnetic fields should be 
-                    considered ``possible human carcinogens'' though the risk was 
-                    ``probably quite small.'' 
-                    </P>
-                    <P>
-                        That was at odds with a 1996 report by a National Research  
-                    Council panel of scientists.Those scientists evaluated about 500 
-                    studies on the health effects of high voltage power lines and found 
-                    ``no conclusive and consistent evidence'' that electric and 
-                    magnetic fields cause any human disease. 
-                    </P>
-                    <P>
-                        Though the link between electricity and disease has long been  
-                    controversial, some consumer groups have sued power companies or 
-                    forced utility firms to move power lines or install shielding. 
-
-                    </P>
+                            Still, Putin said Russia would carry on the military campaign
+                         ``to its completion'' and ``finish off terrorists in their own
+                         den.''
+                         </P>
+                         <P>
+                            Overnight, combined Russian security forces said they had
+                         scoured 160 subway stations and underground passageways using
+                         bomb-sniffing dogs to ensure that the capital's public transit
+                         system with its extensive maze of interconnecting tunnels was clear
+                         of explosives. At Moscow's Kazansky railway station police
+                         reportedly found nearly nine pounds of TNT as well as seven
+                         detonators, which were not hooked up to the explosives.
+                         </P>
+                         <P>
+                            Wednesday morning, Muscovites were back underground as usual,
+                         with thousands of them passing through the reopened, though charred
+                         passageways beneath Pushkin Square, where vendors picked through
+                         the debris in their shops.
+                         </P>
+                         <P>
+                            ``Of course we will go back to work here,'' said one middle-aged
+                         woman sorting through the lingerie in her darkened kiosk. ``And of
+                         course we are scared,'' she added.
+                         </P>
+                         <P>
+                            The low granite walls along the exits from the underground
+                         passageways had already become memorial altars, where friends,
+                         relatives and passersby laid carnations and lilies to express their
+                         sympathy for those who died. Russian television reported Wednesday
+                         night that Putin, too, visited the square and laid flowers.
+                         </P>
+                         <P>
+                            Police officials said they were working with three witnesses who
+                         saw two men bargaining at a leather goods shop in the tunnel and
+                         who dashed for an exit leaving a satchel behind that exploded
+                         moments after the salesgirl summoned a security officer to inspect
+                         the bag.
+                         </P>
+                         <P>
+                            Putin, speaking at the Kremlin, struck a note of calm
+                         resolution, admonishing Russians that terrorism was an
+                         ``international illness'' for which the only cure was ``political
+                         will,'' the ``vigilance of the people'' and effective law
+                         enforcement.
+                         </P>
+                         <P>
+                            Terrorists, he said, ``count on bloodshed, sensation, panic and
+                         hysteria.'' And he warned that ``disorganization and disorder would
+                         make the best possible gift for them.''
+                         </P>
                 </div>
                 
                 <button type="button" class="btn btn-primary" onclick="relevant();draw();screenshot2();redirect('426_4.html');">Relevant</button>
