--- a/426/426_5.html
+++ b/426/426_5.html
@@ -44,75 +44,60 @@
                 
                 <h1>Topic: "Law Enforcement, Dogs" </h1>
                 <div>
-                    <h2> Electric Fields, Cancer Link Nixed </h2>
+                    <h2> Philippines, U.S. Strengthen Anti-narcotics Cooperation </h2>
                     <P>
-                        WASHINGTON (AP) -- Six years of research have produced little  
-                    hard evidence that the magnetic fields around electric power lines 
-                    cause cancer, yet some lingering concerns remain, a National 
-                    Institutes of Health division reported Tuesday. 
-                    </P>
-                    <P>
-                        ``Virtually all of the laboratory evidence in animals and humans  
-                    and most of the mechanistic studies in cells fail to support a 
-                    causal relationship'' between the electromagnetic fields and 
-                    cancer, the National Institute of Environmental Health Sciences 
-                    said in the report to Congress. 
-                    </P>
-                    <P>
-                        However, it said there have been some statistical associations  
-                    between the fields and childhood leukemia as well as chronic 
-                    lymphocytic leukemia in adults exposed to the fields through their 
-                    work, such as electric utility workers, machinists and welders. 
-                    </P>
-                    <P>
-                        Research is continuing on these ``lingering concerns'' and  
-                    efforts to reduce human exposure to electromagnetic fields should 
-                    continue, the report said. 
-                    </P>
-                    <P>
-                        ``The lack of consistent, positive findings in animal or  
-                    mechanistic studies weakens the belief that this association is 
-                    actually due to EMF, but it cannot completely discount the 
-                    epidemiological findings,'' NIEHS Director Kenneth Olden said in a 
-                    statement. 
-                    </P>
-                    <P>
-                        Therefore, he said, since virtually everyone in the country is  
-                    routinely exposed to EMF, efforts to reduce such exposure should 
-                    continue. 
-                    </P>
-                    <P>
-                        For example, the electrical industry should continue efforts to  
-                    reduce the electromagnetic fields around large transmission lines 
-                    and communities should enforce electrical codes to avoid wiring 
-                    errors that can increase EMF. 
-                    </P>
-                    <P>
-                        The focus on a possible link to cancer stemmed from a 1979  
-                    Denver study that tied leukemia to EMF, but the researchers also 
-                    concluded that there was no connection between EMF and other 
-                    problems including Alzheimer's disease, depression and birth 
-                    defects. 
-                    </P>
-                    <P>
-                        Just a year ago, a panel of scientists studying this issue  
-                    concluded, in a 19-9 vote, that electromagnetic fields should be 
-                    considered ``possible human carcinogens'' though the risk was 
-                    ``probably quite small.'' 
-                    </P>
-                    <P>
-                        That was at odds with a 1996 report by a National Research  
-                    Council panel of scientists.Those scientists evaluated about 500 
-                    studies on the health effects of high voltage power lines and found 
-                    ``no conclusive and consistent evidence'' that electric and 
-                    magnetic fields cause any human disease. 
-                    </P>
-                    <P>
-                        Though the link between electricity and disease has long been  
-                    controversial, some consumer groups have sued power companies or 
-                    forced utility firms to move power lines or install shielding. 
-
-                    </P>
+                            MANILA, May 4 (Xinhua) -- The Philippines and the United States
+                            pledged Tuesday to strengthen their cooperation in curbing illegal
+                            drug trade by expanding their anti-narcotics campaign in the
+                            Philippines.
+                            </P>
+                            <P>
+                            This was learned from Presidential Spokesman Fernando Barican
+                            who was present at the meeting between Philippine President Joseph
+                            Estrada and U.S. Ambassador to the Philippines Thomas Hubbard at
+                            the Presidential Palace.
+                            </P>
+                            <P>
+                            "The president and the American ambassador agreed that U.S. and
+                            Philippine anti-drug authorities ought to explore innovative ways
+                            to curtail the drug trade," Barican said.
+                            </P>
+                            <P>
+                            He admitted during his regular press briefing that Hubbard had
+                            echoed Washington's concern that the Philippines had been used by
+                            foreigners running illegal drug syndicates, as a transshipment
+                            point of narcotics bound for the U.S.
+                            </P>
+                            <P>
+                            It is due to this concern, Barican said, that the U.S.
+                            ambassador had asked President Estrada "to address this kind of
+                            problem before it gets to such a stage that it becomes a serious
+                            concern."
+                            </P>
+                            <P>
+                            He stressed that although the Philippines has a wide coastline,
+                            making it an ideal transshipment point of goods bound for the
+                            U.S., the former has not been listed as among the top countries
+                            used as jump-off point for drugs that enter the American market.
+                            </P>
+                            <P>
+                            To address the problem of drug trafficking, Barican said the
+                            Presidential Palace "is considering the creation, in the long
+                            term, of a central unified civilian drug enforcement agency,
+                            patterned after the American model."
+                            </P>
+                            <P>
+                            The U.S. has the Drug Enforcement Agency (DEA) which is
+                            primarily tasked with tracking down the operations of illegal drug
+                            syndicates and effect the arrest of traffickers and
+                            narcotic-related offenders.
+                            </P>
+                            <P>
+                            Barican said such a move would be a long-term goal, as he
+                            explained that the creation of an agency similar to the DEA would
+                            require legislation, and the enactment of such laws by Congress,
+                            normally takes time. 
+                            </P>
                 </div>
                 
                 <button type="button" class="btn btn-primary" onclick="relevant();draw();screenshot2();redirect('426_6.html');">Relevant</button>
