update piracy image
more generic image

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
                 <!--Card image-->
                 <div class="view overlay hm-white-slight">
-                <img src="img/content/piracy.jpeg" class="img-fluid" alt="">
+                <img src="img/content/piracy.png" class="img-fluid" alt="">
                 <a href="367/367_1.html">
                     <div class="mask"></div>
                 </a>
